Make footer icons smaller on screens < 400 pixels to avoid wrapping

--- a/app/assets/stylesheets/_mediaQueries.scss
+++ b/app/assets/stylesheets/_mediaQueries.scss
@@ -9,7 +9,17 @@
 		}
 	}
 }
-
+//-----------------------------------------------
+// For the footer icons
+// ----------------------------------------------
+@media (max-width: 400px){
+	footer a {
+		margin: 0 10px;
+		img {
+			width: 40px;
+		}
+	}
+}
 //-----------------------------------------------
 // From 320 to 540 pixels
 // ----------------------------------------------
